--- a/src/main/resources/elements/async-api-trigger/description.yaml
+++ b/src/main/resources/elements/async-api-trigger/description.yaml
@@ -30,6 +30,8 @@ customTabs:
     uiComponent: async-validation
   - name: Filter Request
     uiComponent: async-filtration
+  - name: Idempotency
+    uiComponent: idempotency-parameters
 properties:
   common:
     - name: reconnectDelay
@@ -62,3 +64,30 @@ properties:
         - MANUAL
         - AUTO
       query: false
+    - name: idempotencyKeyExpression
+      title: Key expression
+      type: string
+    - name: enableIdempotency
+      title: Enable idempotency
+      type: boolean
+      default: false
+    - name: idempotencyKeyExpiry
+      title: Key expiration time (seconds)
+      type: number
+      default: 600
+    - name: actionOnDuplicate
+      title: Action on duplicate message
+      type: string
+      allowedValues:
+          - ignore
+          - throw-exception
+          - execute-subchain
+      default: ignore
+    - name: chainTriggerElementId
+      title: Reference to chain trigger
+      type: string
+      reference: true
+    - name: chainCallTimeout
+      title: Timeout (ms)
+      type: number
+      default: 30000
