--- a/src/main/resources/elements/rabbitmq-trigger-2/description.yaml
+++ b/src/main/resources/elements/rabbitmq-trigger-2/description.yaml
@@ -21,6 +21,9 @@ inputEnabled: false
 colorType: trigger
 outputEnabled: true
 container: false
+customTabs:
+- name: Idempotency
+  uiComponent: idempotency-parameters
 designParameters:
   externalParticipantId: 'RabbitMQ ##{addresses}'
   externalParticipantName: 'RabbitMQ ##{addresses}'
@@ -154,3 +157,30 @@ properties:
       title: SSL
       type: string
       query: true
+    - name: idempotencyKeyExpression
+      title: Key expression
+      type: string
+    - name: enableIdempotency
+      title: Enable idempotency
+      type: boolean
+      default: false
+    - name: idempotencyKeyExpiry
+      title: Key expiration time (seconds)
+      type: number
+      default: 600
+    - name: actionOnDuplicate
+      title: Action on duplicate message
+      type: string
+      allowedValues:
+          - ignore
+          - throw-exception
+          - execute-subchain
+      default: ignore
+    - name: chainTriggerElementId
+      title: Reference to chain trigger
+      type: string
+      reference: true
+    - name: chainCallTimeout
+      title: Timeout (ms)
+      type: number
+      default: 30000
