--- a/src/main/resources/elements/pubsub-trigger/description.yaml
+++ b/src/main/resources/elements/pubsub-trigger/description.yaml
@@ -21,6 +21,9 @@ inputEnabled: false
 colorType: trigger
 outputEnabled: true
 container: false
+customTabs:
+  - name: Idempotency
+    uiComponent: idempotency-parameters
 designParameters:
   externalParticipantId: 'Google Cloud PubSub Project Id ##{projectId}'
   externalParticipantName: 'Google Cloud PubSub Project Id ##{projectId}'
@@ -74,3 +77,31 @@ properties:
       allowedValues:
         - AUTO
         - NONE
+  hidden:
+    - name: idempotencyKeyExpression
+      title: Key expression
+      type: string
+    - name: enableIdempotency
+      title: Enable idempotency
+      type: boolean
+      default: false
+    - name: idempotencyKeyExpiry
+      title: Key expiration time (seconds)
+      type: number
+      default: 600
+    - name: actionOnDuplicate
+      title: Action on duplicate message
+      type: string
+      allowedValues:
+          - ignore
+          - throw-exception
+          - execute-subchain
+      default: ignore
+    - name: chainTriggerElementId
+      title: Reference to chain trigger
+      type: string
+      reference: true
+    - name: chainCallTimeout
+      title: Timeout (ms)
+      type: number
+      default: 30000
