fix(ci): Update maven-snapshot-github-deploy.yaml

--- a/.github/workflows/maven-snapshot-github-deploy.yaml
+++ b/.github/workflows/maven-snapshot-github-deploy.yaml
@@ -34,7 +34,7 @@ jobs:
           then
             echo "❗ The project/properties/revision in the pom.xml has no '-SNAPSHOT' postfix." >> $GITHUB_STEP_SUMMARY
             echo "❗ Workflow fail. Please add '-SNAPSHOT' to the revision." >> $GITHUB_STEP_SUMMARY
-            echo "❗ The project/properties/revision in the pom.xml has '-SNAPSHOT' postfix."
+            echo "❗ The project/properties/revision in the pom.xml has no '-SNAPSHOT' postfix."
             echo "Workflow fail. Please add '-SNAPSHOT' to the revision."
             exit 1
           else
