Checkstyle - catalog-library (#36)

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
         <graphql-maven-plugin.version>2.0</graphql-maven-plugin.version>
         <hibernate-enhance-maven-plugin.version>6.5.2.Final</hibernate-enhance-maven-plugin.version>
+        <qip-checkstyle-revision>0.0.2</qip-checkstyle-revision>
     </properties>
 
     <dependencyManagement>
@@ -386,6 +387,41 @@
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>9.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.qubership</groupId>
+                        <artifactId>qip-checkstyle</artifactId>
+                        <version>${qip-checkstyle-revision}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <violationSeverity>warning</violationSeverity>
+                    <failOnViolation>true</failOnViolation>
+                    <linkXRef>false</linkXRef>
+                    <maxAllowedViolations>0</maxAllowedViolations>
+                    <excludeGeneratedSources>true</excludeGeneratedSources>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
